--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "graphql-dataloader-tutorial",
+  "name": "dataloader-article",
   "version": "1.0.0",
   "main": "src/main.mjs",
   "license": "MIT",
