--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "dataloader-article",
   "version": "1.0.0",
-  "main": "src/main.mjs",
-  "license": "MIT",
+  "main": "dist/main.js",
   "engines": {
     "node": ">=15.0.0"
   },
   "scripts": {
-    "start": "node .",
-    "dev": "nodemon ."
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15",
-    "prettier": "^2.4.1"
+    "build": "tsc",
+    "start": "node ."
   },
   "dependencies": {
-    "apollo-server": "^3.4.0",
-    "graphql": "^15.6.1"
+    "apollo-server": "^3.11.1",
+    "graphql": "^16.6.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18",
+    "prettier": "^2.8.2",
+    "typescript": "^4.9.4"
   }
 }
